frontend/src/components/Worksheet/react-big-calendar-override.css
.rbc-time-header-content {
  border-color: var(--color-border);
  transition: border-color var(--trans-dur);
}

.rbc-header {
  border-bottom: none !important;
}

.rbc-time-header-cell .rbc-header {
  user-select: none;
  cursor: default;
  border-color: var(--color-border);
  transition: border-color var(--trans-dur);
}

.rbc-time-content {
  border-color: var(--color-border);
  transition: border-color var(--trans-dur);
  overflow-y: visible !important;
}

.rbc-time-gutter .rbc-timeslot-group {
  user-select: none;
  cursor: default;
  border-color: var(--color-border);
  transition: border-color var(--trans-dur);
}

.rbc-day-slot .rbc-timeslot-group {
  border-color: var(--color-border);
  transition: border-color var(--trans-dur);
}

.rbc-day-slot .rbc-time-slot {
  border-color: var(--color-border);
  transition: border-color var(--trans-dur);
}

.rbc-events-container {
  border: none !important;
  margin: 0 3px !important;
}

.rbc-allday-cell {
  display: none !important;
}

.rbc-today {
  background-color: transparent !important;
}

.rbc-current-time-indicator {
  background-color: var(--color-primary) !important;
  height: 2px !important;
  pointer-events: none;
  box-shadow: 0 0 0.25rem var(--color-shadow);
}

.rbc-current-time-indicator::before {
  content: '';
  position: absolute;
  left: -0.25rem;
  top: 50%;
  width: 0.5rem;
  height: 0.5rem;
  background-color: var(--color-primary);
  border-radius: 50%;
  transform: translateY(-50%);
}

.exporting-png .rbc-current-time-indicator {
  display: none !important;
}

.rbc-header a:hover {
  color: black !important;
  text-decoration: none !important;
  cursor: default;
}

.rbc-time-view {
  border: none !important;
}

.rbc-event {
  overflow: visible !important;
}

.rbc-event:hover {
  box-shadow: inset 0 0 0 1000px rgb(0 0 0 / 15%);
  z-index: 2;
}

.rbc-event-label {
  display: none !important;
}

@media (max-width: calc(768px - 0.5px)) {
  .rbc-calendar {
    margin: 0 0 0.5rem;
  }
}

